--- a/c-homework/01.md
+++ b/c-homework/01.md
@@ -1,4 +1,4 @@
-物联网陈娄昊
+物联网241陈娄昊
 哥德巴赫猜想代码 请复制到 dev c++ 运行
 
 ```c
@@ -11,18 +11,18 @@ int main() {
     int m=2; 			                        // 初始判断的偶数为2 
     scanf("%d", &N);
     if (N>=4 && N<=10000){				//  4<=N<=10000 
-    if (N % 2!= 0) {					//  判断是否为偶数 
-        printf("输入的不是偶数！");
+        if (N % 2!= 0) {					//  判断是否为偶数 
+            printf("输入的不是偶数！");
     } 
-    else {
-    	while (m<=N) {					//  遍历所有范围内的m 
-        panduan (m);
-		m+=2; 
+        else {
+    	    while (m<=N) {					//  遍历所有范围内的m 
+                panduan (m);
+		         m+=2; 
         }
     }
 }
 	else {
-	printf("请输入在有效范围内的数！");              //  若不在范围内警告 
+	    printf("请输入在有效范围内的数！");              //  若不在范围内警告 
 	}
     return 0;
 }
