--- a/c-homework/【模版】排序.md
+++ b/c-homework/【模版】排序.md
@@ -1,34 +1,54 @@
 
 ```c
-#include <stdio.h>
-void paixu(int arr[], int n);// 该函数为排序函数 
-int  MAX_SIZE;
+#include <bits/stdc++.h>
+using namespace std;
+
+int a[100000], tmp[100000];
+
+void merge(int left, int mid, int right);
+void mergechaifen(int left, int right);
+
 int main() {
-	int n=1, i, arr[i];
-    scanf("%d", &n);
-    	for (i = 0; i < n; i++) { // 遍历来输入要排序的数 
-        	if (1<= arr[i] && arr[i]<=10^9){  
-				scanf("%d", &arr[i]);
-			}
-    	}
-    	paixu(arr, n); // 调用排序函数 
-    	for (i = 0; i < n; i++) { 
-        	printf("%d ", arr[i]); // 保证空格 
-    	}
-    	printf("\n"); // 保证换行 
-	 return 0;
-}
-void paixu(int arr[], int n) { 
-    int i, j, temp;
-    for (i = 0; i < n - 1; i++) {
-        for (j = 0; j < n - i - 1; j++) {
-            if (arr[j] > arr[j + 1]) {
-                // 交换元素
-                temp = arr[j];
-                arr[j] = arr[j + 1];
-                arr[j + 1] = temp;
-            }
+    int n;
+    cin >> n;
+    int nonzero_count = 0;
+    for (int i = 1; i <= n; i++) {
+        cin >> a[i];
+        if (a[i]!= 0) {
+            a[nonzero_count++] = a[i];
         }
     }
+
+    mergechaifen(0, nonzero_count - 1);
+
+    for (int i = 0; i < nonzero_count; i++)
+        cout << a[i] << " ";
+
+    return 0;
+}
+
+void merge(int left, int mid, int right) {
+    int i = left, j = mid + 1, k = left;
+    while (i <= mid && j <= right) {
+        if (a[i] <= a[j])
+            tmp[k++] = a[i++];
+        else
+            tmp[k++] = a[j++];
+    }
+    while (i <= mid)
+        tmp[k++] = a[i++];
+    while (j <= right)
+        tmp[k++] = a[j++];
+    for (int i = left; i <= right; i++)
+        a[i] = tmp[i];
+}
+
+void mergechaifen(int left, int right) {
+    if (left >= right)
+        return;
+    int mid = (left + right) / 2;
+    mergechaifen(left, mid);
+    mergechaifen(mid + 1, right);
+    merge(left, mid, right);
 }
 ```
