--- a/c-homework/【模版】排序.md
+++ b/c-homework/【模版】排序.md
@@ -3,25 +3,25 @@
 #include <bits/stdc++.h>
 using namespace std;
 
-int a[100000], tmp[100000];
+int a[100000], tmp[100000]; // 定义全局数组和临时数组,保证在范围中可以使用
+void merge(int left, int mid, int right); // 合并函数
 
-void merge(int left, int mid, int right);
-void mergechaifen(int left, int right);
+void mergechaifen(int left, int right);// 分治法
 
 int main() {
     int n;
-    cin >> n;
+    cin >> n;// 输入数组长度
     int nonzero_count = 0;
-    for (int i = 1; i <= n; i++) {
+    for (int i = 1; i <= n; i++) {// 输入数组元素
         cin >> a[i];
-        if (a[i]!= 0) {
+        if (a[i]!= 0) {  // 统计非零元素个数
             a[nonzero_count++] = a[i];
         }
     }
 
-    mergechaifen(0, nonzero_count - 1);
+    mergechaifen(0, nonzero_count - 1);// 调用分治法函数
 
-    for (int i = 0; i < nonzero_count; i++)
+    for (int i = 0; i < nonzero_count; i++) // 输出排序后的数组
         cout << a[i] << " ";
 
     return 0;
@@ -29,13 +29,13 @@ int main() {
 
 void merge(int left, int mid, int right) {
     int i = left, j = mid + 1, k = left;
-    while (i <= mid && j <= right) {
+    while (i <= mid && j <= right) {// 合并两个有序子数组
         if (a[i] <= a[j])
             tmp[k++] = a[i++];
         else
             tmp[k++] = a[j++];
     }
-    while (i <= mid)
+    while (i <= mid) // 合并剩余的元素防止超出
         tmp[k++] = a[i++];
     while (j <= right)
         tmp[k++] = a[j++];
@@ -46,7 +46,8 @@ void merge(int left, int mid, int right) {
 void mergechaifen(int left, int right) {
     if (left >= right)
         return;
-    int mid = (left + right) / 2;
+    int mid = (left + right) / 2;// 分治法
+
     mergechaifen(left, mid);
     mergechaifen(mid + 1, right);
     merge(left, mid, right);
